<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings">
    <ListPreference
        android:defaultValue="@string/first_level"
        android:entries="@array/setting_levels"
        android:entryValues="@array/setting_levels"
        android:key = "@string/levelKey"
        android:title="@string/level"
        android:summary="%s"
        />
    <ListPreference
        android:defaultValue="@string/default_language"
        android:entries="@array/setting_language_entries"
        android:entryValues="@array/setting_language_values"
        android:key = "@string/language_key"
        android:title="@string/language"
        android:summary="%s"
        />
</PreferenceScreen>